# ualr_chatbot_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  doc_metadata.pkl  docker-compose.yml  drive_pipeline.py  faiss_index.faiss  faiss_index.index  llm.py  main.py  pipeline.py  pyproject.toml  retriever.py
app/: main.py  retriever.py
data/: Current Graduate Coordinators.xlsx
notebook/: excel_to_nl.ipynb  program_grad_coord.jsonl
scripts/: rebuild_index_from_jsonl.py
tests/: test_main.py
