[tool.poetry]
name = "server"
version = "0.1.0"
description = "fastapi server for ualr_chatbot"
authors = ["Ishmam <ishmam.a.solaiman@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
sentence-transformers = "^4.1.0"
faiss-cpu = "^1.10.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
